# complex_processes_modeling

./: README.md
lab1/: CMakeLists.txt  config.cfg
lab1/doc/: edumms_lab_2020_rk6_12m_kosenkovaa_lab1.docx
lab1/include/: bodyFallMathModel.hpp  config.hpp  utils.hpp
lab1/lib/: CMakeLists.txt
lab1/lib/include/: euler.hpp  rungeKutta.hpp
lab1/lib/src/: euler.cpp  rungeKutta.cpp
lab1/src/: bodyFallMathModel.cpp  config.cpp  main.cpp  utils.cpp
lab3/: graph.drawio
lab3/doc/: edumms_lab_2022_rk6_12m_kosenkovaa_lab3.docx
lab3/src/: backward-solver.adot  backward-solver.aini  forward-solver.adot  forward-solver.aini
